--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,10 @@ dependencies:
   flutter_bloc: ^7.0.0
   flutter_platform_widgets: ^1.9.0
   go_router: ^2.1.0
+  flutter_hooks: ^0.18.0
+  hooks_riverpod: ^1.0.0-dev.11
   intl: ^0.17.0
   json_annotation: ^4.0.1
-  
   lottie: ^1.0.1
   provider: ^5.0.0
   uuid: ^3.0.4
@@ -32,6 +33,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^4.1.3
+  very_good_analysis: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
