--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,12 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
-  bloc: ^7.0.0
-  chewie: ^1.2.2
   collection: ^1.15.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.0.0
   flutter_hooks: ^0.18.0
+  flutter_markdown: ^0.6.9
   flutter_platform_widgets: ^1.9.0
   go_router: ^2.1.0
   hooks_riverpod: ^1.0.0-dev.11
